<resources>
    <string name="app_name">Track</string>

    <string name="e_mail">E-mail</string>
    <string name="password">Пароль</string>
    <string name="confirm_password">Повторить пароль</string>
    <string name="continue_login">Продолжить</string>
    <string name="u_register"><u>Зарегистрироваться</u></string>
    <string name="u_login"><u>Войти</u></string>
    <string name="first_name">Имя</string>
    <string name="last_name">Фамилиля</string>
    <string name="main_screen">Главный экран</string>
    <string name="reminder">Напоминание</string>
    <string name="exit">Выход</string>
    <string name="day">День</string>
    <string name="month">Месяц</string>
    <string name="time">Время</string>
    <string name="cancel">Отмена</string>
    <string name="create">Создать</string>
    <string name="delete">Удалить</string>
    <string name="edit">Изменить</string>
    <string name="run_text">Пробежка</string>
    <string name="title_activity_run">RunActivity</string>

    <string name="me">Я</string>
    <string name="start">Старт</string>
    <string name="finish">Финиш</string>

    <string name="have_to_finish_track">Сначала завершите пробежку</string>
</resources>