<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_circle"
        android:padding="10dp"
        xmlns:app="http://schemas.android.com/apk/res-auto">

      <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/recDayOfWeek"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
          android:orientation="horizontal"
          tools:listitem="@layout/item_day_of_week"
          app:layout_constraintTop_toTopOf="parent"
          />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/recDayOfWeek"
            app:layout_constraintStart_toStartOf="@id/np_hour"
            app:layout_constraintEnd_toEndOf="@id/np_minute"/>

        <NumberPicker
            android:id="@+id/np_hour"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/tvTime"
            app:layout_constraintEnd_toStartOf="@id/np_minute"
            app:layout_constraintStart_toStartOf="parent"/>

        <NumberPicker
            android:id="@+id/np_minute"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/tvTime"
            app:layout_constraintStart_toEndOf="@id/np_hour"
            app:layout_constraintEnd_toEndOf="parent"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            android:background="@drawable/button_purple"
            android:textColor="@color/textcolor_button_purple"
            app:layout_constraintTop_toBottomOf="@id/np_hour"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toStartOf="@id/btnCancel"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_purple"
            android:textColor="@color/textcolor_button_purple"
            app:layout_constraintTop_toBottomOf="@id/np_hour"
            app:layout_constraintStart_toEndOf="@id/btnDelete"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toStartOf="@id/btnCreate"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_purple"
            android:textColor="@color/textcolor_button_purple"
            app:layout_constraintTop_toBottomOf="@id/np_hour"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnCancel"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>